# char_counter

./: .dockerignore  .gitignore  Dockerfile  compose.yml  docker-compose.yml  pyproject.toml
counter/: settings.py  urls.py
counter_app/: urls.py  utils.py  views.py
counter_app/templates/: base.html  footer.html  header.html  index.html
